made a template district page (idukki)

--- a/Destinations/dest2.html
+++ b/Destinations/dest2.html
@@ -43,22 +43,21 @@
   </nav>
 
 
-    <div class="container py-4">
+  <div class="container py-4">
       <div class="p-4 mb-4 bg-light rounded-3">
         <div class="container-fluid py-5">
           <h2 class="display-5 fw-bold">Districts of Kerala</h2>
           <p class="col-md-8 fs-6">The state of Kerala is divided into 14 districts. Each district, with its plethora of destinations and rich culture, attracts tourists from all around the world. We've made a list of destinations from each district, which we know you'll enjoy.</p>
         </div>
       </div>
-    </div>
+  </div>
 
-    <div class="container my-grid">
+  <div class="container my-grid">
 
     <div class="row row-cols-md-4">
       <div class="column">
         <div class="bg-image hover-zoom district" style="background-image: url(../images/idukki.jpg);">
-        <!-- <img src="../images/idukki.jpg" class="w-100"/> -->
-        <a href="../Districts/idukki.html">
+        <a href="../Districts/kasaragod.html">
           <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)">
             <div class="d-flex justify-content-center align-items-center h-100">
             <div class="map">
@@ -79,7 +78,7 @@
       <div class="column">
         <div class="bg-image hover-zoom district" style="background-image: url(../images/idukki.jpg);">
         <!-- <img src="../images/idukki.jpg" class="w-100"/> -->
-        <a href="../Districts/idukki.html">
+        <a href="../Districts/kannur.html">
           <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)">
             <div class="d-flex justify-content-center align-items-center h-100">
             <div class="map">
@@ -100,14 +99,14 @@
       <div class="column">
         <div class="bg-image hover-zoom district" style="background-image: url(../images/idukki.jpg);">
         <!-- <img src="../images/idukki.jpg" class="w-100"/> -->
-        <a href="../Districts/idukki.html">
+        <a href="../Districts/wayanad.html">
           <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)">
             <div class="d-flex justify-content-center align-items-center h-100">
             <div class="map">
-                <img src="../images/idukki_map.png" class="map_png">
+                <img src="../images/wayanad_map.png" class="map_png">
             </div>
             <div class="text-start">
-              <span class="text-white map_name">Idukki</span>
+              <span class="text-white map_name">Wayanad</span>
             </div>
             </div>
           </div>
@@ -121,14 +120,14 @@
       <div class="column">
         <div class="bg-image hover-zoom district" style="background-image: url(../images/idukki.jpg);">
         <!-- <img src="../images/idukki.jpg" class="w-100"/> -->
-        <a href="../Districts/idukki.html">
+        <a href="../Districts/kozhikkode.html">
           <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)">
             <div class="d-flex justify-content-center align-items-center h-100">
             <div class="map">
-                <img src="../images/idukki_map.png" class="map_png">
+                <img src="../images/kozhikkode_map.png" class="map_png">
             </div>
             <div class="text-start">
-              <span class="text-white map_name">Idukki</span>
+              <span class="text-white map_name">Kozhikode</span>
             </div>
             </div>
           </div>
@@ -144,15 +143,14 @@
     <div class="row row-cols-md-4">
       <div class="column">
         <div class="bg-image hover-zoom district" style="background-image: url(../images/idukki.jpg);">
-        <!-- <img src="../images/idukki.jpg" class="w-100"/> -->
-        <a href="../Districts/idukki.html">
+        <a href="../Districts/malappuram.html">
           <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)">
             <div class="d-flex justify-content-center align-items-center h-100">
             <div class="map">
-                <img src="../images/idukki_map.png" class="map_png">
+                <img src="../images/malappuram_map.png" class="map_png">
             </div>
             <div class="text-start">
-              <span class="text-white map_name">Idukki</span>
+              <span class="text-white map_name">Malappuram</span>
             </div>
             </div>
           </div>
@@ -166,14 +164,14 @@
       <div class="column">
         <div class="bg-image hover-zoom district" style="background-image: url(../images/idukki.jpg);">
         <!-- <img src="../images/idukki.jpg" class="w-100"/> -->
-        <a href="../Districts/idukki.html">
+        <a href="../Districts/palakkad.html">
           <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)">
             <div class="d-flex justify-content-center align-items-center h-100">
             <div class="map">
-                <img src="../images/idukki_map.png" class="map_png">
+                <img src="../images/palakkad_map.png" class="map_png">
             </div>
             <div class="text-start">
-              <span class="text-white map_name">Idukki</span>
+              <span class="text-white map_name">Palakkad</span>
             </div>
             </div>
           </div>
@@ -187,14 +185,14 @@
       <div class="column">
         <div class="bg-image hover-zoom district" style="background-image: url(../images/idukki.jpg);">
         <!-- <img src="../images/idukki.jpg" class="w-100"/> -->
-        <a href="../Districts/idukki.html">
+        <a href="../Districts/thrissur.html">
           <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)">
             <div class="d-flex justify-content-center align-items-center h-100">
             <div class="map">
-                <img src="../images/idukki_map.png" class="map_png">
+                <img src="../images/thrissur_map.png" class="map_png">
             </div>
             <div class="text-start">
-              <span class="text-white map_name">Idukki</span>
+              <span class="text-white map_name">Thrissur</span>
             </div>
             </div>
           </div>
@@ -208,14 +206,14 @@
       <div class="column">
         <div class="bg-image hover-zoom district" style="background-image: url(../images/idukki.jpg);">
         <!-- <img src="../images/idukki.jpg" class="w-100"/> -->
-        <a href="../Districts/idukki.html">
+        <a href="../Districts/ernakulam.html">
           <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)">
             <div class="d-flex justify-content-center align-items-center h-100">
             <div class="map">
-                <img src="../images/idukki_map.png" class="map_png">
+                <img src="../images/Ernakulam_map.png" class="map_png">
             </div>
             <div class="text-start">
-              <span class="text-white map_name">Idukki</span>
+              <span class="text-white map_name">Ernakulam</span>
             </div>
             </div>
           </div>
@@ -231,7 +229,6 @@
     <div class="row row-cols-md-4">
       <div class="column">
         <div class="bg-image hover-zoom district" style="background-image: url(../images/idukki.jpg);">
-        <!-- <img src="../images/idukki.jpg" class="w-100"/> -->
         <a href="../Districts/idukki.html">
           <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)">
             <div class="d-flex justify-content-center align-items-center h-100">
@@ -253,14 +250,14 @@
       <div class="column">
         <div class="bg-image hover-zoom district" style="background-image: url(../images/idukki.jpg);">
         <!-- <img src="../images/idukki.jpg" class="w-100"/> -->
-        <a href="../Districts/idukki.html">
+        <a href="../Districts/kottayam.html">
           <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)">
             <div class="d-flex justify-content-center align-items-center h-100">
             <div class="map">
-                <img src="../images/idukki_map.png" class="map_png">
+                <img src="../images/kottayam_map.png" class="map_png">
             </div>
             <div class="text-start">
-              <span class="text-white map_name">Idukki</span>
+              <span class="text-white map_name">Kottayam</span>
             </div>
             </div>
           </div>
@@ -274,14 +271,14 @@
       <div class="column">
         <div class="bg-image hover-zoom district" style="background-image: url(../images/idukki.jpg);">
         <!-- <img src="../images/idukki.jpg" class="w-100"/> -->
-        <a href="../Districts/idukki.html">
+        <a href="../Districts/alappuzha.html">
           <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)">
             <div class="d-flex justify-content-center align-items-center h-100">
             <div class="map">
-                <img src="../images/idukki_map.png" class="map_png">
+                <img src="../images/alappuzha_map.png" class="map_png">
             </div>
             <div class="text-start">
-              <span class="text-white map_name">Idukki</span>
+              <span class="text-white map_name">Alappuzha</span>
             </div>
             </div>
           </div>
@@ -294,15 +291,14 @@
       
       <div class="column">
         <div class="bg-image hover-zoom district" style="background-image: url(../images/idukki.jpg);">
-        <!-- <img src="../images/idukki.jpg" class="w-100"/> -->
-        <a href="../Districts/idukki.html">
+        <a href="../Districts/pathanamthitta.html">
           <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)">
             <div class="d-flex justify-content-center align-items-center h-100">
             <div class="map">
-                <img src="../images/idukki_map.png" class="map_png">
+                <img src="../images/pathanamthitta_map.png" class="map_png">
             </div>
             <div class="text-start">
-              <span class="text-white map_name">Idukki</span>
+              <span class="text-white map_name">Pathanamthitta</span>
             </div>
             </div>
           </div>
@@ -318,15 +314,14 @@
     <div class="row row-cols-md-4">
       <div class="column">
         <div class="bg-image hover-zoom district" style="background-image: url(../images/idukki.jpg);">
-        <!-- <img src="../images/idukki.jpg" class="w-100"/> -->
-        <a href="../Districts/idukki.html">
+        <a href="../Districts/kollam.html">
           <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)">
             <div class="d-flex justify-content-center align-items-center h-100">
             <div class="map">
-                <img src="../images/idukki_map.png" class="map_png">
+                <img src="../images/kollam_map.png" class="map_png">
             </div>
             <div class="text-start">
-              <span class="text-white map_name">Idukki</span>
+              <span class="text-white map_name">Kollam</span>
             </div>
             </div>
           </div>
@@ -339,15 +334,14 @@
       
       <div class="column">
         <div class="bg-image hover-zoom district" style="background-image: url(../images/idukki.jpg);">
-        <!-- <img src="../images/idukki.jpg" class="w-100"/> -->
-        <a href="../Districts/idukki.html">
+        <a href="../Districts/trivandrum.html">
           <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)">
             <div class="d-flex justify-content-center align-items-center h-100">
             <div class="map">
-                <img src="../images/idukki_map.png" class="map_png">
+                <img src="../images/trivandrum_map.png" class="map_png">
             </div>
             <div class="text-start">
-              <span class="text-white map_name">Idukki</span>
+              <span class="text-white map_name">Thiruvananthapuram</span>
             </div>
             </div>
           </div>
