--- a/Districts/kannur.html
+++ b/Districts/kannur.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kasaragod</title>
+    <title>Kannur</title>
     <link rel="stylesheet" href ="dist.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -45,7 +45,7 @@
     <div class="container py-4">
         <div class="p-4 mb-6 bg-dark rounded-3">
           <div class="container-fluid py-5">
-            <h2 class="display-5 fw-bold text-light">Kasaragod</h2>
+            <h2 class="display-5 fw-bold text-light">Kannur</h2>
             <p class="col-md-8 fs-6 text-light">The state of Kerala is divided into 14 districts. Each district, with its plethora of destinations and rich culture, attracts tourists from all around the world. We've made a list of destinations from each district, which we know you'll enjoy.</p>
           </div>
         </div>
@@ -65,13 +65,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/bekal1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/aaralam1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/bekal2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/aaralam2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/bekal3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/aaralam3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -85,8 +85,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Bekal Fort</h5>
-                      <p class="card-text">Built by Shivappa Nayaka of Keladi in 1650 AD Bekal fort is the largest fort in Kerala, spreading over 40 acres. The fort appears to emerge from the sea and has about three-fourths of its exterior in contact with the sea. The fort is important for its history as well as for the picturesque location.</p>
+                      <h5 class="card-title">Aaralam Farm</h5>
+                      <p class="card-text">The Aralam Farm and Wildlife Sanctuary is evergreen and deciduous forest area spanning 55 sq. kms on the slope of the Western Ghats. The Aralam Sanctuary is home to a wide array of flora and fauna, the only wildlife sanctuary in Kannur district, and the best spot for eco-tourists.</p>
                     </div>
                 </div>
             </div>
@@ -102,13 +102,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/madhur1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/muzha1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/madhur2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/muzha2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/madhur3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/muzha3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide="prev">
@@ -122,12 +122,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Madhur Temple</h5>
-                      <p class="card-text">Madhur Sree Madanantheshwara-Siddhivinayaka Temple is a popular 
-                                            Shiva and Ganapathi temple located 7 km (4.3 mi) from Kasaragod town,
-                                             on the banks of Mogral river, locally known as Madhuvahini.
-                                            The main deity of this temple is Lord Shiva known as Madanantheshwara,
-                                             meaning the god who killed Kama, the god of desires.</p>
+                      <h5 class="card-title">Muzhappilangad Beach</h5>
+                      <p class="card-text">Muzhappilangad Drive-in Beach is a beach on the Malabar Coast, parallel to National Highway 66 and is the longest drive-in beach in Asia. The beach is bordered by black rocks, which also protects it from the stronger ocean currents. These rocks provide habitat for Blue Mussel, a local delicacy. It is also a bird watching hotspot.</p>
                     </div>
                 </div>
             </div>
@@ -143,13 +139,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/ranipuram1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/paithal1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/ranipuram2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/paithal2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/ranipuram3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/paithal3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="prev">
@@ -163,8 +159,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Ranipuram</h5>
-                      <p class="card-text">Also known as Kerala’s Ooty, situated 750 m above sea level, it makes for a perfect picnic spot where one can even come across the occasional herd of elephants. Once known as Madathumala, it borders Karnataka and boasts some of the best trekking trails in the area.</p>
+                      <h5 class="card-title">Paithalmala</h5>
+                      <p class="card-text">Paithalmala is a hill station located near Pottenplave Village. At a height of 1372m above sea level, this is the highest geographic peak in Kannur. Nestled in the Kerala-Karnataka border near the Kodagu forests, it lies in the Western Ghats. Trekking is the major activity here. There is an observatory atop the hill, which is a 45 min trek from Paithal Valley.</p>
                     </div>
                 </div>
             </div>
