--- a/Districts/wayanad.html
+++ b/Districts/wayanad.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kasaragod</title>
+    <title>Wayanad</title>
     <link rel="stylesheet" href ="dist.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -45,7 +45,7 @@
     <div class="container py-4">
         <div class="p-4 mb-6 bg-dark rounded-3">
           <div class="container-fluid py-5">
-            <h2 class="display-5 fw-bold text-light">Kasaragod</h2>
+            <h2 class="display-5 fw-bold text-light">Wayanad</h2>
             <p class="col-md-8 fs-6 text-light">The state of Kerala is divided into 14 districts. Each district, with its plethora of destinations and rich culture, attracts tourists from all around the world. We've made a list of destinations from each district, which we know you'll enjoy.</p>
           </div>
         </div>
@@ -65,13 +65,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/bekal1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/900k1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/bekal2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/900k2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/bekal3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/900k3.webp" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -85,8 +85,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Bekal Fort</h5>
-                      <p class="card-text">Built by Shivappa Nayaka of Keladi in 1650 AD Bekal fort is the largest fort in Kerala, spreading over 40 acres. The fort appears to emerge from the sea and has about three-fourths of its exterior in contact with the sea. The fort is important for its history as well as for the picturesque location.</p>
+                      <h5 class="card-title">900 Kandi</h5>
+                      <p class="card-text">900 Kandi or Thollayiram Kandi in Malayalam, apparently meaning 900 square kilometers of lush, dark forest is set high on the Western Ghats. The glass bridge, built at a height of 100ft, offers a 360-degree view of the green surroundings, and is a major attraction. A prime destination for trekking and camping.</p>
                     </div>
                 </div>
             </div>
@@ -102,13 +102,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/madhur1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/chembra1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/madhur2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/chembra2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/madhur3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/chembra3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide="prev">
@@ -122,12 +122,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Madhur Temple</h5>
-                      <p class="card-text">Madhur Sree Madanantheshwara-Siddhivinayaka Temple is a popular 
-                                            Shiva and Ganapathi temple located 7 km (4.3 mi) from Kasaragod town,
-                                             on the banks of Mogral river, locally known as Madhuvahini.
-                                            The main deity of this temple is Lord Shiva known as Madanantheshwara,
-                                             meaning the god who killed Kama, the god of desires.</p>
+                      <h5 class="card-title">Chembra Peak</h5>
+                      <p class="card-text">Chembra is the highest peak in the district and lives up to its billing of being a picturesque location. It has managed to maintain its pristine nature over the years. Situated 2,100 m above sea level, this peak offers a breath-taking view of rare flora and fauna. The route to the peak itself has a brilliant view along with a heart-shaped lake, waterfalls and lush greenery the whole way. It is a prime spot for trekking.</p>
                     </div>
                 </div>
             </div>
@@ -143,13 +139,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/ranipuram1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/edak1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/ranipuram2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/edak2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/ranipuram3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/edak3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="prev">
@@ -163,8 +159,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Ranipuram</h5>
-                      <p class="card-text">Also known as Kerala’s Ooty, situated 750 m above sea level, it makes for a perfect picnic spot where one can even come across the occasional herd of elephants. Once known as Madathumala, it borders Karnataka and boasts some of the best trekking trails in the area.</p>
+                      <h5 class="card-title">Edakkal Caves</h5>
+                      <p class="card-text">The Edakkal Caves are two natural caves at a remote location at Edakkal. They lie 1,200m above sea level on Ambukutty Mala, near an ancient trade route connecting the high mountains of Mysore to the ports of the Malabar coast. Inside the caves are pictorial writings believed to date to at least 6,000 BCE, from the Neolithic man, indicating the presence of a prehistoric settlements in the region. These settlements are older than the Indus Valley Civilization.</p>
                     </div>
                 </div>
             </div>
