--- a/Districts/thrissur.html
+++ b/Districts/thrissur.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Malappuram</title>
+    <title>Thrissur</title>
     <link rel="stylesheet" href ="dist.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -45,7 +45,7 @@
     <div class="container py-4">
         <div class="p-4 mb-6 bg-dark rounded-3">
           <div class="container-fluid py-5">
-            <h2 class="display-5 fw-bold text-light">Malappuram</h2>
+            <h2 class="display-5 fw-bold text-light">Thrissur</h2>
             <p class="col-md-8 fs-6 text-light">The state of Kerala is divided into 14 districts. Each district, with its plethora of destinations and rich culture, attracts tourists from all around the world. We've made a list of destinations from each district, which we know you'll enjoy.</p>
           </div>
         </div>
@@ -65,13 +65,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/nlm1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/vdk1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/nlm2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/vdk2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/nlm3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/vdk3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -85,12 +85,11 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Nilambur</h5>
-                      <p class="card-text">Nilambur is located close to the Nilgiris range of
-                        the Western Ghats on the banks of the Chaliyar River. This place is also known as 'Teak Town'
-                        because of the abundance of Nilambur teaks in this area. The bank of river Chaliyar at Nilambur
-                        region is also known for its natural Gold fields. The hilly forested area of Nilambur forms a
-                        portion of the Nilgiri Biosphere Reserve of rich biodiversity.</p>
+                      <h5 class="card-title">Vadakkunathan Temple</h5>
+                      <p class="card-text">An ancient Hindu temple dedicated to Lord Shiva at the city of Thrissur, this temple is a
+                        classical example of the architectural style of Kerala and has one monumental tower on
+                        each of the four sides in addition to a kuttambalam. It also serves as the venue for the
+                        Thrissur Pooram, the biggest festival in Kerala each year.</p>
                     </div>
                 </div>
             </div>
@@ -106,13 +105,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/tp1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/atp1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/tp2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/atp2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/tp3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/atp3.webp" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide="prev">
@@ -126,8 +125,10 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Thunchan Parambu</h5>
-                      <p class="card-text">Thunchan Parambu or Thunchan Memorial Trust and Research Centre is a place in Tirur. It is the birthplace of Thunchath Ezhuthachan, the father of the Malayalam language. A memorial (Thunjan Smarakam) for the great poet was built at Thunjan Parambu in 1964. </p>
+                      <h5 class="card-title">Athirapally Waterfalls</h5>
+                      <p class="card-text">Located on the Chalakudy River, Athirapally waterfalls is the largest waterfall in Kerala,
+                        which stands tall at 80 feet. It is also known as “Niagra of South India”. There are lots of
+                        resorts and hotels around it, in the midst of lush green forests.</p>
                     </div>
                 </div>
             </div>
@@ -143,13 +144,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/kdl1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/shakthan1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/kdl2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/shakthan2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/kdl3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/shakthan3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="prev">
@@ -163,8 +164,10 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Kadalundi</h5>
-                      <p class="card-text">Kadalundi is famous for its bird sanctuary, which is home to various migratory birds during certain seasons and has been recently declared as a bio-reserve. The Kadalundi-Vallikkunnu community reserve is the first community reserve in Kerala.</p>
+                      <h5 class="card-title">Shakthan Thampuran Palace</h5>
+                      <p class="card-text">Shakthan Thampuran Palace also known as Vadakkekara Palace, was reconstructed
+                        in Kerala-Dutch style in 1795 by Ramavarma Thampuran of Cochin. The palace was converted into a museum in 2005. The main structure of the Sakthan Thampuran Palace
+                        has a two-storeyed building and a traditional Kerala style Nālukettu.</p>
                     </div>
                 </div>
             </div>
