--- a/Districts/palakkad.html
+++ b/Districts/palakkad.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Malappuram</title>
+    <title>Palakkad</title>
     <link rel="stylesheet" href ="dist.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -45,7 +45,7 @@
     <div class="container py-4">
         <div class="p-4 mb-6 bg-dark rounded-3">
           <div class="container-fluid py-5">
-            <h2 class="display-5 fw-bold text-light">Malappuram</h2>
+            <h2 class="display-5 fw-bold text-light">Palakkad</h2>
             <p class="col-md-8 fs-6 text-light">The state of Kerala is divided into 14 districts. Each district, with its plethora of destinations and rich culture, attracts tourists from all around the world. We've made a list of destinations from each district, which we know you'll enjoy.</p>
           </div>
         </div>
@@ -65,13 +65,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/nlm1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/sv1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/nlm2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/sv2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/nlm3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/sv3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -85,12 +85,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Nilambur</h5>
-                      <p class="card-text">Nilambur is located close to the Nilgiris range of
-                        the Western Ghats on the banks of the Chaliyar River. This place is also known as 'Teak Town'
-                        because of the abundance of Nilambur teaks in this area. The bank of river Chaliyar at Nilambur
-                        region is also known for its natural Gold fields. The hilly forested area of Nilambur forms a
-                        portion of the Nilgiri Biosphere Reserve of rich biodiversity.</p>
+                      <h5 class="card-title">Silent Valley</h5>
+                      <p class="card-text">Silent Valley National Park in Palakkad has some rare species of flora and fauna, among which the most famous are the lion tailed macaques. It is the core of the Nilgiri Biosphere Reserve and is part of the Nilgiri Sub-Cluster Western Ghats World Heritage Site, recognised by UNESCO in 2007.</p>
                     </div>
                 </div>
             </div>
