districts done, add desc and bgs, also complete home

--- a/Districts/alappuzha.html
+++ b/Districts/alappuzha.html
@@ -65,13 +65,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/V1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/kuttanad1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/V2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/kuttanad2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/V3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/kuttanad3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -85,8 +85,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Vagamon</h5>
-                      <p class="card-text">Vagamon is mainly a hill station with an overtone of green. Listed by the National Geographic Traveler their directory of the "50 most attractive places to visit in India", Vagamon has lush green hills, breathtaking ravines, meandering rivulets, small waterfalls and pine forests. Tourists can also try paragliding and other activities here.</p>
+                      <h5 class="card-title">Kuttanad</h5>
+                      <p class="card-text">A land of lush paddy fields, Kuttanad is also called the Rice Bowl of Kerala or the Netherlands of Kerala and is one of the few places in the world where farming is done below sea level. Farmers of Kuttanad are famous for Biosaline Farming. It is well known for its boat race in the Punnamada Backwaters, known in Malayalam as Vallamkalli. Four of Kerala's major rivers, the Pamba, Meenachil, Achankovil and Manimala flow into the region. It has an extensive public transport system consisting of boats, much like that of Venice.</p>
                     </div>
                 </div>
             </div>
@@ -102,13 +102,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/FK1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/Vemb1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/FK2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/Vemb2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/FK3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/Vemb3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide="prev">
@@ -122,8 +122,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Fort Kochi</h5>
-                      <p class="card-text">Fort Kochi, is a locality 16 km from Cochin city and takes its name from Fort Manuel of Cochin, the first European fort on Indian soil. This is part of a handful of water-bound islands and islets toward the south-west of mainland Kochi, and collectively known as Old Cochin or West Kochi. Its colourful streets, churches, synagogues, hotels and beaches make it a famous tourist destination. The chinese fish nets here are a must see.</p>
+                      <h5 class="card-title">Vembanad Lake</h5>
+                      <p class="card-text">Vembanad, also known as Punnamada is the longest lake in India, as well as the largest lake in the state of Kerala. A unique characteristic of the lake is the 1,252 metre long Thanneermukkom salt water barrier constructed as a part of the Kuttanad Development Scheme to prevent the intrusion of salt water into the Kuttanad low-lands. It is the largest mud regulator in India.  Vembanad Lake is at the heart of Kerala Backwaters tourism with hundreds of kettuvallams plied on it and numerous resorts on its banks. The Kumarakom Bird Sanctuary is located on the east coast of the lake.</p>
                     </div>
                 </div>
             </div>
@@ -139,13 +139,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/HP1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/krishna1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/HP2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/krishna2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/HP3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/krishna3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="prev">
@@ -159,8 +159,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Hill Palace</h5>
-                      <p class="card-text">Hill  Palace museum is the largest archeological museum in the state and was the imperial administrative office and official residence of the Cochin Maharaja. Built in 1865, the palace complex consists of 49 buildings in the traditional architectural style, spreading across 54 acres. The complex has an archaeological museum, a heritage museum, a deer park, a pre-historic park and a children’s park.</p>
+                      <h5 class="card-title">Krishnapuram Palace</h5>
+                      <p class="card-text">The Krishnapuram Palace located in Kayamkulam was built in the 18th century by Anizham Thirunal Marthanda Varma. It was built in the architectural style of Kerala with gabled roof, narrow corridor and dormer windows. The museum contains exhibits that belonged to the Palace and its former occupant, the Travancore Maharaja Marthanda Varma. It is also famous for a large pond within the palace complex, which is said to have an underground escape route to the outside of the palace. Among the many Kerala-style paintings seen in the palace, a distinctly placed mural painting is titled "Gajendra Moksham" of 154 square feet size, which is said to be the largest in Kerala. </p>
                     </div>
                 </div>
             </div>
