--- a/Districts/idukki.html
+++ b/Districts/idukki.html
@@ -68,10 +68,10 @@
                             <img src="../images/munnar1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/munnar1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/munnar2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/munnar1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/munnar3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -85,8 +85,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <h5 class="card-title">Munnar</h5>
+                      <p class="card-text"> Lying 1,600 m above sea level, Munnar is a popular hill station which was once the summer resort of the erstwhile British Government in South India. Sprawling tea plantations, picturesque towns, winding lanes and holiday facilities make this a popular resort town. Among the exotic flora found in the forests and grasslands here is the Neelakurinji. This flower which bathes the hills in blue once every twelve years, will bloom next in 2030.</p>
                     </div>
                 </div>
             </div>
@@ -102,13 +102,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/munnar1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/thekkady1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/munnar1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/thekkady2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/munnar1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/thekkady3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide="prev">
@@ -122,8 +122,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <h5 class="card-title">Thekkady</h5>
+                      <p class="card-text">Thekkady sanctuary is famous for its dense evergreen, semi-evergreen, moist deciduous forests and savanna grass lands. It is home to herds of elephants, sambar, tigers, gaur, lion-tailed macaques and Nilgiri langurs. The splendid artificial lake formed by the Mullaperiyar Dam across the Periyar River adds to the charm of the park. Thekkady is considered a haven for natural spices such as black pepper, cardamom, cinnamon, nutmeg, nutmace, ginger, and clove.</p>
                     </div>
                 </div>
             </div>
@@ -139,13 +139,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/munnar1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/marayoor1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/idukki.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/marayoor2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/munnar1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/marayoor3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="prev">
@@ -159,8 +159,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <h5 class="card-title">Marayur</h5>
+                      <p class="card-text">Marayur claims to be a part of a Stone Age civilization that is as old as 10,000 B.C.It is also home to a later period of large-scale dolmen-building.Earlier the villages here were called the "Anju nadu", literally meaning "five lands". Megalithic Dolmens, also called Muniyaras, belong to the Iron Age and are burial chambers. These are a must to see attraction here. Marayur also has scenic churches, sandalwood forests and tea plantations that add to its beauty.</p>
                     </div>
                 </div>
             </div>
