--- a/Districts/kollam.html
+++ b/Districts/kollam.html
@@ -65,13 +65,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/V1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/jdpra1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/V2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/jdpra2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/V3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/jdpra3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -85,8 +85,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Vagamon</h5>
-                      <p class="card-text">Vagamon is mainly a hill station with an overtone of green. Listed by the National Geographic Traveler their directory of the "50 most attractive places to visit in India", Vagamon has lush green hills, breathtaking ravines, meandering rivulets, small waterfalls and pine forests. Tourists can also try paragliding and other activities here.</p>
+                      <h5 class="card-title">Jadayupara</h5>
+                      <p class="card-text">Jadayupara nature park has the world's largest bird sculpture of Jadayu a mythical creature from the Ramayana. The sculpture in itself is amazing, but it also has exhibition centres,museums and observation decks inside that provide a bird's eye view of the surroundings. Paintball, valley crossing, bouldering, zip line, trekking, archery, rappelling, jumaring and wall climbing are among the myriad of activities available here. The area also offers multiple cuisines at the food court with a panoramic view and the age-old Siddha Cave Healing Center as well for a complete, wholesome experience.</p>
                     </div>
                 </div>
             </div>
@@ -102,13 +102,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/FK1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/sashtamkotta1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/FK2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/sashtamkotta2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/FK3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/sashtamkotta3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide="prev">
@@ -122,8 +122,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Fort Kochi</h5>
-                      <p class="card-text">Fort Kochi, is a locality 16 km from Cochin city and takes its name from Fort Manuel of Cochin, the first European fort on Indian soil. This is part of a handful of water-bound islands and islets toward the south-west of mainland Kochi, and collectively known as Old Cochin or West Kochi. Its colourful streets, churches, synagogues, hotels and beaches make it a famous tourist destination. The chinese fish nets here are a must see.</p>
+                      <h5 class="card-title">Sasthamkotta</h5>
+                      <p class="card-text">Sasthamkotta fresh water lake is the largest fresh water lake in Kerala.  The place is naturally beautiful and is surrounded by hills and valleys. In the midst of the hills is the Fresh Water Lake, famous for boating and sightseeing. One of the features of Sasthamkotta temple is the abundance of monkeys that camp around it.</p>
                     </div>
                 </div>
             </div>
@@ -139,13 +139,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/HP1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/palaruvi1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/HP2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/palaruvi2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/HP3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/palaruvi3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="prev">
@@ -159,8 +159,9 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Hill Palace</h5>
-                      <p class="card-text">Hill  Palace museum is the largest archeological museum in the state and was the imperial administrative office and official residence of the Cochin Maharaja. Built in 1865, the palace complex consists of 49 buildings in the traditional architectural style, spreading across 54 acres. The complex has an archaeological museum, a heritage museum, a deer park, a pre-historic park and a children’s park.</p>
+                      <h5 class="card-title">Palaruvi</h5>
+                      <p class="card-text">Palaruvi Waterfalls, which literally translates to ‘Stream of Milk’, comes down through rocks from a height of 300 feet and forms a stunning backdrop of milk-white burst of foam, the sound of which resounds through the otherwise peaceful virgin forests of Kollam. This amazing destination is surrounded by lush green valleys and natural herbal groves, which apparently makes this waterfall, rich in medicinal properties. 
+                      </p>
                     </div>
                 </div>
             </div>
