--- a/Districts/kottayam.html
+++ b/Districts/kottayam.html
@@ -139,13 +139,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/HP1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/kumarakom1.jpeg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/HP2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/kumarakom2.jpeg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/HP3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/kumarakom3.jpeg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="prev">
@@ -159,8 +159,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Hill Palace</h5>
-                      <p class="card-text">Hill  Palace museum is the largest archeological museum in the state and was the imperial administrative office and official residence of the Cochin Maharaja. Built in 1865, the palace complex consists of 49 buildings in the traditional architectural style, spreading across 54 acres. The complex has an archaeological museum, a heritage museum, a deer park, a pre-historic park and a children’s park.</p>
+                      <h5 class="card-title">Kumarakom</h5>
+                      <p class="card-text">Sprawling across 14 hectares, and sitting by the banks of the river Vembanad, Kumarakom bird sanctuary is a vibrant hub of rare and numerous avian species. It is also famous for the luxurious houseboats and dazzling backwaters.</p>
                     </div>
                 </div>
             </div>
