--- a/Districts/pathanamthitta.html
+++ b/Districts/pathanamthitta.html
@@ -65,13 +65,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/V1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/gavi1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/V2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/gavi2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/V3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/gavi3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -85,8 +85,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Vagamon</h5>
-                      <p class="card-text">Vagamon is mainly a hill station with an overtone of green. Listed by the National Geographic Traveler their directory of the "50 most attractive places to visit in India", Vagamon has lush green hills, breathtaking ravines, meandering rivulets, small waterfalls and pine forests. Tourists can also try paragliding and other activities here.</p>
+                      <h5 class="card-title">Gavi</h5>
+                      <p class="card-text">Gavi is a beautiful village inside the Ranni reserve forest.It is a part of the Periyar Tiger Reserve. Forest tent camping is available from November through March. Gavi's forest area, there are two gopher trees and they are believed to be the only two gopher trees in India.Gavi's evergreen forests are abundant with exotic flora and fauna. Apparently gopher trees in India are seen only at Gavi.</p>
                     </div>
                 </div>
             </div>
@@ -102,13 +102,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/FK1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/Thri1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/FK2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/Thri2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/FK3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/Thri3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide="prev">
@@ -122,8 +122,9 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Fort Kochi</h5>
-                      <p class="card-text">Fort Kochi, is a locality 16 km from Cochin city and takes its name from Fort Manuel of Cochin, the first European fort on Indian soil. This is part of a handful of water-bound islands and islets toward the south-west of mainland Kochi, and collectively known as Old Cochin or West Kochi. Its colourful streets, churches, synagogues, hotels and beaches make it a famous tourist destination. The chinese fish nets here are a must see.</p>
+                      <h5 class="card-title">Thrivenisangamam</h5>
+                      <p class="card-text">Situated on the way to Sabarimala, the Thriveni Sanganam as the name suggests is the point where the Holy Pamba River meets with the Manimala River in its north and with the Achankovil River in the south.Devotees believe that it was near this holy river that King Rajasekara gained a vision of Lord Ayappa.
+                      </p>
                     </div>
                 </div>
             </div>
@@ -139,13 +140,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/HP1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/P3.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/HP2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/P2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/HP3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/P1.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="prev">
@@ -159,8 +160,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Hill Palace</h5>
-                      <p class="card-text">Hill  Palace museum is the largest archeological museum in the state and was the imperial administrative office and official residence of the Cochin Maharaja. Built in 1865, the palace complex consists of 49 buildings in the traditional architectural style, spreading across 54 acres. The complex has an archaeological museum, a heritage museum, a deer park, a pre-historic park and a children’s park.</p>
+                      <h5 class="card-title">Perunthenaruvi</h5>
+                      <p class="card-text">Located on the Western Ghats of the Sahyadri Range, Perunthenaruvi is famous for the waterfalls there. The waterfalls are known for their wide area, rather than their height. The stream later unites with the Pamba River. It is beautiful and dangerous at the same time.</p>
                     </div>
                 </div>
             </div>
