--- a/Districts/trivandrum.html
+++ b/Districts/trivandrum.html
@@ -65,13 +65,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/V1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/pad2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/V2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/pad3.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/V3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/pad4.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -85,8 +85,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Vagamon</h5>
-                      <p class="card-text">Vagamon is mainly a hill station with an overtone of green. Listed by the National Geographic Traveler their directory of the "50 most attractive places to visit in India", Vagamon has lush green hills, breathtaking ravines, meandering rivulets, small waterfalls and pine forests. Tourists can also try paragliding and other activities here.</p>
+                      <h5 class="card-title">Padmanabhaswamy Temple</h5>
+                      <p class="card-text">The name of the city of 'Thiruvananthapuram' in Malayalam translates to "The City of Lord Ananta", referring to the deity of the Padmanabhaswamy temple.  The principal deity Lord Vishnu is enshrined in the "Anantha Shayana" posture, the eternal yogic sleep on the infinite serpent Adi Shesha. The temple is built in an intricate fusion of the Chera style and the Dravidian style of architecture, featuring high walls, and a 16th-century gopura.  It is considered as the richest place of worship in the world, and has unopened vaults filled with extravagant treasures shrouded in mystery.</p>
                     </div>
                 </div>
             </div>
@@ -102,13 +102,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/FK1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/kovalam1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/FK2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/kovalam2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/FK3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/kovalam3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide="prev">
@@ -122,8 +122,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Fort Kochi</h5>
-                      <p class="card-text">Fort Kochi, is a locality 16 km from Cochin city and takes its name from Fort Manuel of Cochin, the first European fort on Indian soil. This is part of a handful of water-bound islands and islets toward the south-west of mainland Kochi, and collectively known as Old Cochin or West Kochi. Its colourful streets, churches, synagogues, hotels and beaches make it a famous tourist destination. The chinese fish nets here are a must see.</p>
+                      <h5 class="card-title">Kovalam Beach</h5>
+                      <p class="card-text">Kovalam is an internationally renowned beach with three adjacent crescent beaches. It has been a favourite haunt of tourists since the 1930s. A massive rocky promontory on the beach has created a beautiful bay of calm waters ideal for sea bathing.The leisure options at this beach include sunbathing, swimming, herbal body toning massages, special cultural programmes, catamaran cruising etc. The beach complex includes a string of budget cottages, Ayurvedic health resorts, convention facilities, shopping zones, swimming pools and Yoga.</p>
                     </div>
                 </div>
             </div>
@@ -139,13 +139,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/HP1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/Agastha1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/HP2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/Agastha2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/HP3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/Agastha3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="prev">
@@ -159,8 +159,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Hill Palace</h5>
-                      <p class="card-text">Hill  Palace museum is the largest archeological museum in the state and was the imperial administrative office and official residence of the Cochin Maharaja. Built in 1865, the palace complex consists of 49 buildings in the traditional architectural style, spreading across 54 acres. The complex has an archaeological museum, a heritage museum, a deer park, a pre-historic park and a children’s park.</p>
+                      <h5 class="card-title">Agasthyamala</h5>
+                      <p class="card-text">Agasthyarkoodam is a pilgrimage centre for devotees of the Hindu sage Agastya. Agasthyamala Biosphere Reserve is among 20 new sites added by UNESCO to its World Network of Biosphere Reserves. The Agasthyarkoodam peak is an important trekking destination and it takes about two days to complete the trek.  The perennial river Thamirabarani originates from the peak. The trek in itself is a beautiful experience.</p>
                     </div>
                 </div>
             </div>
