done with districts, finish up home and dest

--- a/Districts/ernakulam.html
+++ b/Districts/ernakulam.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -46,7 +47,7 @@
         <div class="p-4 mb-6 bg-dark rounded-3">
           <div class="container-fluid py-5">
             <h2 class="display-5 fw-bold text-light">Ernakulam</h2>
-            <p class="col-md-8 fs-6 text-light">The state of Kerala is divided into 14 districts. Each district, with its plethora of destinations and rich culture, attracts tourists from all around the world. We've made a list of destinations from each district, which we know you'll enjoy.</p>
+            <p class="col-md-8 fs-6 text-light">A metropolitan city with info parks and IT companies and also gorgeous forests, beaches and islands, Ernakulam is a district like no other! Famous for the shopping malls and markets, it is a haven for foodies and art lovers, with the Muziris biennale every year.</p>
           </div>
         </div>
     </div>
