--- a/Districts/kasaragod.html
+++ b/Districts/kasaragod.html
@@ -46,7 +46,7 @@
         <div class="p-4 mb-6 bg-dark rounded-3">
           <div class="container-fluid py-5">
             <h2 class="display-5 fw-bold text-light">Kasaragod</h2>
-            <p class="col-md-8 fs-6 text-light">The state of Kerala is divided into 14 districts. Each district, with its plethora of destinations and rich culture, attracts tourists from all around the world. We've made a list of destinations from each district, which we know you'll enjoy.</p>
+            <p class="col-md-8 fs-6 text-light">Kerala's northernmost district, Kasargod shares its boundaries with Karnataka. Along with Malayalam, people also use Kannada as a language here. It is famous for Bekal fort, sprawling along the coast of the Arabian sea.</p>
           </div>
         </div>
     </div>
