--- a/Districts/alappuzha.html
+++ b/Districts/alappuzha.html
@@ -46,7 +46,7 @@
         <div class="p-4 mb-6 bg-dark rounded-3">
           <div class="container-fluid py-5">
             <h2 class="display-5 fw-bold text-light">Alappuzha</h2>
-            <p class="col-md-8 fs-6 text-light">The state of Kerala is divided into 14 districts. Each district, with its plethora of destinations and rich culture, attracts tourists from all around the world. We've made a list of destinations from each district, which we know you'll enjoy.</p>
+            <p class="col-md-8 fs-6 text-light">With the Arabian Sea on the west and a vast network of lakes, lagoons and fresh water rivers crisscrossing it, Alappuzha is a district of immense and natural beauty. Referred to as the Venice of the east by travellers from across the world, this backwater country is also home to diverse animal and bird life. </p>
           </div>
         </div>
     </div>
@@ -160,7 +160,7 @@
 
                     <div class="card-body">
                       <h5 class="card-title">Krishnapuram Palace</h5>
-                      <p class="card-text">The Krishnapuram Palace located in Kayamkulam was built in the 18th century by Anizham Thirunal Marthanda Varma. It was built in the architectural style of Kerala with gabled roof, narrow corridor and dormer windows. The museum contains exhibits that belonged to the Palace and its former occupant, the Travancore Maharaja Marthanda Varma. It is also famous for a large pond within the palace complex, which is said to have an underground escape route to the outside of the palace. Among the many Kerala-style paintings seen in the palace, a distinctly placed mural painting is titled "Gajendra Moksham" of 154 square feet size, which is said to be the largest in Kerala. </p>
+                      <p class="card-text">The Krishnapuram Palace located in Kayamkulam was built in the 18th century by Anizham Thirunal Marthanda Varma. It was built in the architectural style of Kerala with gabled roof, narrow corridor and dormer windows. The museum contains exhibits that belonged to the Palace and its former occupant, the Travancore Maharaja Marthanda Varma. It is also famous for a large pond within the palace complex, which is said to have an underground escape route to the outside of the palace. Among the many Kerala-style paintings seen in the palace, a distinctly placed mural painting is titled "Gajendra Moksham" of 154 square feet size.</p>
                     </div>
                 </div>
             </div>
