--- a/Districts/idukki.html
+++ b/Districts/idukki.html
@@ -46,7 +46,7 @@
         <div class="p-4 mb-6 bg-dark rounded-3">
           <div class="container-fluid py-5">
             <h2 class="display-5 fw-bold text-light">Idukki</h2>
-            <p class="col-md-8 fs-6 text-light">The state of Kerala is divided into 14 districts. Each district, with its plethora of destinations and rich culture, attracts tourists from all around the world. We've made a list of destinations from each district, which we know you'll enjoy.</p>
+            <p class="col-md-8 fs-6 text-light">Located close to the Western Ghats, the district of Idukki is famous for its tea, ginger and cardamom plantations and for its mountain trails and peaks. Witnessing the snow falling in Meeshapulimala or the Neelakurunji blooming (once in 12 years) are priceless experiences.</p>
           </div>
         </div>
     </div>
