--- a/Districts/kozhikkode.html
+++ b/Districts/kozhikkode.html
@@ -46,7 +46,7 @@
         <div class="p-4 mb-6 bg-dark rounded-3">
           <div class="container-fluid py-5">
             <h2 class="display-5 fw-bold text-light">Kozhikkode</h2>
-            <p class="col-md-8 fs-6 text-light">The state of Kerala is divided into 14 districts. Each district, with its plethora of destinations and rich culture, attracts tourists from all around the world. We've made a list of destinations from each district, which we know you'll enjoy.</p>
+            <p class="col-md-8 fs-6 text-light">Kozhikode or Calicut is one of those districts that embody the true spirit of Kerala. It has thriving marketplaces, busy streets and that whole metropolitan vibe, but at the same time is gifted by nature with long coastlines, multitude of beaches and spectacular waterfalls.</p>
           </div>
         </div>
     </div>
