--- a/Districts/pathanamthitta.html
+++ b/Districts/pathanamthitta.html
@@ -46,7 +46,7 @@
         <div class="p-4 mb-6 bg-dark rounded-3">
           <div class="container-fluid py-5">
             <h2 class="display-5 fw-bold text-light">Pathanamthitta</h2>
-            <p class="col-md-8 fs-6 text-light">The state of Kerala is divided into 14 districts. Each district, with its plethora of destinations and rich culture, attracts tourists from all around the world. We've made a list of destinations from each district, which we know you'll enjoy.</p>
+            <p class="col-md-8 fs-6 text-light">Sabarimala, one of the most devout temples of Lord Ayyappa, is located at Pathanamthitta, which is also famous for its handmade metal-alloy mirrors, "Aranmula kannadi" and scenic forests.</p>
           </div>
         </div>
     </div>
