--- a/Districts/thrissur.html
+++ b/Districts/thrissur.html
@@ -46,7 +46,7 @@
         <div class="p-4 mb-6 bg-dark rounded-3">
           <div class="container-fluid py-5">
             <h2 class="display-5 fw-bold text-light">Thrissur</h2>
-            <p class="col-md-8 fs-6 text-light">The state of Kerala is divided into 14 districts. Each district, with its plethora of destinations and rich culture, attracts tourists from all around the world. We've made a list of destinations from each district, which we know you'll enjoy.</p>
+            <p class="col-md-8 fs-6 text-light">A district in central Kerala, Thrissur is especially famous for "Thrissur pooram", a colourful festival held with much pomp and grandeur at the grounds of the Sri Vadakkunatha temple each year. Catch a glimpse of the famous fireworks, "kudamattom" and elephant parades during the festival.</p>
           </div>
         </div>
     </div>
