--- a/Districts/wayanad.html
+++ b/Districts/wayanad.html
@@ -46,7 +46,7 @@
         <div class="p-4 mb-6 bg-dark rounded-3">
           <div class="container-fluid py-5">
             <h2 class="display-5 fw-bold text-light">Wayanad</h2>
-            <p class="col-md-8 fs-6 text-light">The state of Kerala is divided into 14 districts. Each district, with its plethora of destinations and rich culture, attracts tourists from all around the world. We've made a list of destinations from each district, which we know you'll enjoy.</p>
+            <p class="col-md-8 fs-6 text-light">Set amongst the Western Ghats, Kerala's Wayanad district is known for its natural beauty. There are forests, waterfalls, mountain peaks ideal for trekking and jungle resorts enough to quench your thirst for nature. Come to Wayand for an unadulterated experience of the Western Ghats.</p>
           </div>
         </div>
     </div>
