finish up home, all else done

--- a/Districts/trivandrum.html
+++ b/Districts/trivandrum.html
@@ -46,7 +46,7 @@
         <div class="p-4 mb-6 bg-dark rounded-3">
           <div class="container-fluid py-5">
             <h2 class="display-5 fw-bold text-light">Thiruvananthapuram</h2>
-            <p class="col-md-8 fs-6 text-light">This southernmost district of Kerala, also serves as the state's capital. A bustling city with lots of busy streets and  markets, it is also the land of Lord Vishnu, as suggested by the name and also serves as the location for the Sri Padmanabhaswamy temple.</p>
+            <p class="col-md-8 fs-6 text-light">The southernmost district of Kerala, also serves as the state's capital. A bustling city with lots of busy streets and  markets, it is also the land of Lord Vishnu, as suggested by the name and also serves as the location for the Sri Padmanabhaswamy temple.</p>
           </div>
         </div>
     </div>
